<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loginfragment_email"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/correo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/newaccount"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:textColor="@color/black"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="325sp"
        android:layout_height="55sp"
        android:layout_marginVertical="30dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_loginfragment_email"
        android:backgroundTint="@color/orage"
        app:layout_constraintStart_toStartOf="@+id/newaccount"
        app:layout_constraintTop_toBottomOf="@+id/newaccount" />

    <TextView
        android:id="@+id/newaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@color/sky_blue"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_loginfragment_email"
        app:layout_constraintTop_toTopOf="@+id/inputLayout_loginfragment_email"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>