<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:backgroundTint="@color/white">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buenos_dias"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/temporal"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_perfil"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/mensaje"
        app:layout_constraintStart_toStartOf="@+id/mensaje"
        app:layout_constraintTop_toBottomOf="@+id/mensaje"
        android:backgroundTint="@color/orage"/>


</androidx.constraintlayout.widget.ConstraintLayout>