<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newAccountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loginfragment_email"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nueva_cuenta"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NuevaCuenta"
        android:layout_width="325sp"
        android:layout_height="55sp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orage"
        android:text="@string/crear_cuenta"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout_loginfragment_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputLayout_loginfragment_email"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_loginfragment_email" />


</androidx.constraintlayout.widget.ConstraintLayout>